--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <nav>
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            главная
+          </li>
+          <li class="header__links-list-item">
+            <a href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+      <img class="header-logo-image" src="/images/logo-black.svg" alt="Логотип проекта">
+
+      <address class="header__address address">
+        <a href="tel:+90000000">
+          +9 999 555 5555
+        </a>
+        <a href="mailto:info@sobaka.ge">
+          info@sobaka.ge
+        </a>
+        наб. Принсенграхт 263- <br>
+        265, Амстердам
+      </address>
+    </header>
 
     <main>
       <section class="cover"></section>
