--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
 
-      <img class="header-logo-image" src="/images/logo-black.svg" alt="Логотип проекта">
+      <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта">
 
       <address class="header__address address">
         <a href="tel:+90000000">
@@ -40,7 +40,30 @@
     </header>
 
     <main>
-      <section class="cover"></section>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <!-- <div>
+            <span class="letter-spacing-default">О</span>
+            <span class="letter-spacing-extended">но</span>
+          </div>
+          
+          <div class="aligned-text aligned-text_center">
+            <span >те</span>
+            <span >бе</span>
+          </div>
+          <div class="aligned-text_right">
+            <span class="letter-spacing-extended">н</span>
+            <span>ад</span>
+            <span>о</span>
+          </div> -->
+
+          <span class="aligned-text">оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+        
+      </section>
       <section class="lots"></section>
       <section class="about"></section>
     </main>
