--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
+          <li class="header__links-list-item list-item_no-bullit">
             главная
           </li>
           <li class="header__links-list-item">
-            <a class="header__links-list-item-underline" href="#0"
+            <a class="list-item-underline" href="#0"
               >посмотреть лоты</a
             >
           </li>
           <li class="header__links-list-item">
-            <a class="header__links-list-item-underline" href="#0"
+            <a class="list-item-underline" href="#0"
               >об аукционе</a
             >
           </li>
@@ -36,11 +36,11 @@
       />
 
       <address class="header__address address">
-        <a class="header__links-list-item-underline" href="tel:+90000000">
+        <a class="list-item-underline" href="tel:+90000000">
           +9 999 555 5555
         </a>
         <a
-          class="header__links-list-item-underline"
+          class="list-item-underline"
           href="mailto:info@sobaka.ge"
         >
           info@sobaka.ge
@@ -61,7 +61,7 @@
       </section>
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
-        <ul class="lots__card-list">
+        <ul class="lots__card-list list-item_no-bullit">
           <li class="lots__card-list-item">
             <a href="#0">
               <article class="card card_type_film">
@@ -163,6 +163,65 @@
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="footer__address address">
+        <a class="list-item-underline" href="tel:+90000000">
+          +9 999 555 5555
+        </a>
+        <a
+          class="list-item-underline"
+          href="mailto:info@sobaka.ge"
+        >
+          info@sobaka.ge
+        </a>
+        наб. Принсенграхт 263- <br />
+        265, Амстердам
+      </address>
+
+      <nav class="footer__menu">
+        <ul class="footer__menu-list list-item_no-bullit">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link_active" href="">
+              <p class="aligned-text_center">
+                главная
+              </p> 
+            </a>
+          </li>
+          <li class="footer__menu-list-item list-item-underline">
+            <a class="footer__menu-link" href="">
+              <p class="aligned-text_center">
+                посмотреть лоты 
+              </p>
+            </a>
+          </li>
+          <li class="footer__menu-list-item list-item-underline">
+            <a class="footer__menu-link" href="">
+              <p class="aligned-text_center">
+                об аукционе
+              </p>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer__social-list list-item_no-bullit">
+        <li class="footer__social-list-item">
+          <a href="#0">
+            <img class="footer__social-icon" src="/images/yt.svg" alt="Youtube">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0">
+            <img class="footer__social-icon" src="/images/vk.svg" alt="Vkontakte">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0">
+            <img class="footer__social-icon" src="/images/pinterest.svg" alt="Pinterest">
+          </a>
+        </li>
+      </ul>
+
+    </footer>
   </body>
 </html>
