some code visuals fixes

--- a/index.html
+++ b/index.html
@@ -13,36 +13,27 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item list-item_no-bullit">
-            главная
+          <li class="header__links-list-item list-item_no-bullit">главная</li>
+          <li class="header__links-list-item">
+            <a class="link-underline" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="list-item-underline" href="#0"
-              >посмотреть лоты</a
-            >
-          </li>
-          <li class="header__links-list-item">
-            <a class="list-item-underline" href="#0"
-              >об аукционе</a
-            >
+            <a class="link-underline" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
 
-      <img
-        class="header__logo-image"
-        src="/images/logo-black.svg"
-        alt="Логотип проекта"
-      />
+      <a href="#0">
+        <img
+          class="header__logo-image"
+          src="/images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
 
       <address class="header__address address">
-        <a class="list-item-underline" href="tel:+90000000">
-          +9 999 555 5555
-        </a>
-        <a
-          class="list-item-underline"
-          href="mailto:info@sobaka.ge"
-        >
+        <a class="link-underline" href="tel:+90000000"> +9 999 555 5555 </a>
+        <a class="link-underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
         наб. Принсенграхт 263- <br />
@@ -63,7 +54,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list list-item_no-bullit">
           <li class="lots__card-list-item">
-            <a href="#0">
+            <a class="link-underline" href="#0">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -78,7 +69,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#0">
+            <a class="link-underline" href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -96,7 +87,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#0">
+            <a class="link-underline" href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -165,13 +156,8 @@
 
     <footer class="footer">
       <address class="footer__address address">
-        <a class="list-item-underline" href="tel:+90000000">
-          +9 999 555 5555
-        </a>
-        <a
-          class="list-item-underline"
-          href="mailto:info@sobaka.ge"
-        >
+        <a class="link-underline" href="tel:+90000000"> +9 999 555 5555 </a>
+        <a class="link-underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
         наб. Принсенграхт 263- <br />
@@ -182,23 +168,17 @@
         <ul class="footer__menu-list list-item_no-bullit">
           <li class="footer__menu-list-item">
             <a class="footer__menu-link_active" href="">
-              <p class="aligned-text_center">
-                главная
-              </p> 
+              <p class="aligned-text_center">главная</p>
             </a>
           </li>
-          <li class="footer__menu-list-item list-item-underline">
+          <li class="footer__menu-list-item link-underline">
             <a class="footer__menu-link" href="">
-              <p class="aligned-text_center">
-                посмотреть лоты 
-              </p>
+              <p class="aligned-text_center">посмотреть лоты</p>
             </a>
           </li>
-          <li class="footer__menu-list-item list-item-underline">
+          <li class="footer__menu-list-item link-underline">
             <a class="footer__menu-link" href="">
-              <p class="aligned-text_center">
-                об аукционе
-              </p>
+              <p class="aligned-text_center">об аукционе</p>
             </a>
           </li>
         </ul>
@@ -207,21 +187,32 @@
       <ul class="footer__social-list list-item_no-bullit">
         <li class="footer__social-list-item">
           <a href="#0">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="Youtube">
+            <img
+              class="footer__social-icon"
+              src="/images/yt.svg"
+              alt="Youtube"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0">
-            <img class="footer__social-icon" src="/images/vk.svg" alt="Vkontakte">
+            <img
+              class="footer__social-icon"
+              src="/images/vk.svg"
+              alt="Vkontakte"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0">
-            <img class="footer__social-icon" src="/images/pinterest.svg" alt="Pinterest">
+            <img
+              class="footer__social-icon"
+              src="/images/pinterest.svg"
+              alt="Pinterest"
+            />
           </a>
         </li>
       </ul>
-
     </footer>
   </body>
 </html>
