--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#0">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип проекта"
         />
       </a>
@@ -54,10 +54,10 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list list-item_no-bullit">
           <li class="lots__card-list-item">
-            <a class="link-underline" href="#0">
+            <a href="#0">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h3 class="card__title">
+                <h3 class="card__title link-underline">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="card__text">
@@ -69,10 +69,10 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="link-underline" href="#0">
+            <a href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h3 class="card__title">
+                <h3 class="card__title link-underline">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
                 <p class="card__text">
@@ -87,10 +87,10 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="link-underline" href="#0">
+            <a href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h3 class="card__title">
+                <h3 class="card__title link-underline">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
                 <p class="card__text">
@@ -109,7 +109,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="Логотип проекта"
           />
         </div>
@@ -189,7 +189,7 @@
           <a href="#0">
             <img
               class="footer__social-icon"
-              src="/images/yt.svg"
+              src="./images/yt.svg"
               alt="Youtube"
             />
           </a>
@@ -198,7 +198,7 @@
           <a href="#0">
             <img
               class="footer__social-icon"
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="Vkontakte"
             />
           </a>
@@ -207,7 +207,7 @@
           <a href="#0">
             <img
               class="footer__social-icon"
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="Pinterest"
             />
           </a>
