--- a/index.html
+++ b/index.html
@@ -45,10 +45,24 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">оно</span>
-          <span class="aligned-text aligned-text_center">тебе</span>
-          <span class="aligned-text aligned-text_right">надо</span>
+          О<span class="letter-spacing-extended">но</span>
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span>
+          </span>
+          <span class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            >
+          </span>
         </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, <span class="huge-letter-spacing">в</span>которые
+            никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
@@ -115,40 +129,20 @@
         </div>
         <div>
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text shorter-letter-spacing">
-            Здесь вы не встретите очередное
-            <span class="no-letter-spacing">
-              пафосное собрание невероятно дорогого антиквариата.
-            </span>
-            <span class="short-letter-spacing"> Наши </span>
-            лоты вообще не должны
-            <span class="no-letter-spacing">
-              были попасть ни на один аукцион. Потому что кому нужен
-            </span>
-            <span class="medium-letter-spacing"> дневник </span>
-            девочки-подростка
-            <span class="no-letter-spacing">
-              или картина, которую может нарисовать
-            </span>
-            <span class="shorter-letter-spacing"> даже ребёнок? </span>
-            Кому нужны все эти странные вещи, созданные любителями?
+          <p class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
           </p>
           <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то
-            <span class="higher-lettук-spacing">они</span>
-            казались просто
-            <span class="shorter-letter-spacing">
-              неудачными. Но, несмотря на
-            </span>
-            критику, кажущуюся простоту или сложность, сейчас без этих лотов
-            невозможно
-            <span class="shorter-letter-spacing">
-              представить современную культуру.
-            </span>
-            Когда в эти вещи не верил никто, продолжали верить их создатели. И
-            сейчас эти лоты стали культовыми.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
@@ -164,28 +158,28 @@
         265, Амстердам
       </address>
 
-      <nav class="footer__menu">
-        <ul class="footer__menu-list list-item_no-bullit">
+      <nav>
+        <ul class="aligned-text_center footer__menu-list list-item_no-bullit">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active" href="">
-              <p class="aligned-text_center">главная</p>
+            <a href="#0">
+              <p>главная</p>
             </a>
           </li>
           <li class="footer__menu-list-item link-underline">
-            <a class="footer__menu-link" href="">
-              <p class="aligned-text_center">посмотреть лоты</p>
+            <a class="footer__menu-link" href="#0">
+              <p>посмотреть лоты</p>
             </a>
           </li>
           <li class="footer__menu-list-item link-underline">
-            <a class="footer__menu-link" href="">
-              <p class="aligned-text_center">об аукционе</p>
+            <a class="footer__menu-link" href="#0">
+              <p>об аукционе</p>
             </a>
           </li>
         </ul>
       </nav>
 
       <ul class="footer__social-list list-item_no-bullit">
-        <li class="footer__social-list-item">
+        <li>
           <a href="#0">
             <img
               class="footer__social-icon"
@@ -194,7 +188,7 @@
             />
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a href="#0">
             <img
               class="footer__social-icon"
@@ -203,7 +197,7 @@
             />
           </a>
         </li>
-        <li class="footer__social-list-item">
+        <li>
           <a href="#0">
             <img
               class="footer__social-icon"
