index.html fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header class="header">
       <nav>
         <ul class="header__links-list">
-          <li class="header__links-list-item list-item_no-bullit">главная</li>
+          <li class="header__links-list-item list-item_no-bullit">
+            <a href="#0">главная</a>
+          </li>
           <li class="header__links-list-item">
             <a class="link-underline" href="#0">посмотреть лоты</a>
           </li>
@@ -32,12 +34,14 @@
       </a>
 
       <address class="header__address address">
-        <a class="link-underline" href="tel:+90000000"> +9 999 555 5555 </a>
+        <a class="link-underline" href="tel:+99995555555"> +9 999 555 5555 </a>
         <a class="link-underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
-        наб. Принсенграхт 263- <br />
-        265, Амстердам
+        <p>
+          наб. Принсенграхт 263- <br />
+          265, Амстердам
+        </p>
       </address>
     </header>
 
@@ -61,7 +65,7 @@
             Аукцион вещей, <span class="huge-letter-spacing">в</span>которые
             никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -150,30 +154,26 @@
 
     <footer class="footer">
       <address class="footer__address address">
-        <a class="link-underline" href="tel:+90000000"> +9 999 555 5555 </a>
+        <a class="link-underline" href="tel:+99995555555"> +9 999 555 5555 </a>
         <a class="link-underline" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a>
-        наб. Принсенграхт 263- <br />
-        265, Амстердам
+        <p>
+          наб. Принсенграхт 263- <br />
+          265, Амстердам
+        </p>
       </address>
 
       <nav>
         <ul class="aligned-text_center footer__menu-list list-item_no-bullit">
           <li class="footer__menu-list-item">
-            <a href="#0">
-              <p>главная</p>
-            </a>
+            <a href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item link-underline">
-            <a class="footer__menu-link" href="#0">
-              <p>посмотреть лоты</p>
-            </a>
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item link-underline">
-            <a class="footer__menu-link" href="#0">
-              <p>об аукционе</p>
-            </a>
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
