--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -62,8 +62,7 @@
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
-            Аукцион вещей, <span class="huge-letter-spacing">в</span>которые
-            никто не верил
+            Аукцион вещей, в которые никто не верил
           </p>
           <button class="bet-button" type="button">Сделать ставку</button>
         </div>
